# aviation-supply-console

./: .gitignore  README.md  pyproject.toml
src/aviation_supply_console/: app.py  cli.py
src/aviation_supply_console/api/: routes.py  schemas.py
src/aviation_supply_console/core/: config.py
src/aviation_supply_console/db/: base.py
src/aviation_supply_console/models/: entities.py
src/aviation_supply_console/services/: airports.py  classification.py  http.py  ingestion.py  state_engine.py
src/aviation_supply_console/static/: app.css
src/aviation_supply_console/templates/: aircraft_detail.html  index.html  map.html
tests/: test_airports.py  test_app.py  test_classification.py  test_http.py  test_ingestion.py
